--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="morningpages.app.niklas.morningpages">
 
-    <!--TODO Schöneres Logo, von Creative Commons? CC in Dingen mit Geld erlaubt?, RUnde Ecken-->
+    <!-- TODO Schöneres Logo, von Creative Commons? CC in Dingen mit Geld erlaubt?, RUnde Ecken -->
     <application
         android:allowBackup="true"
         android:icon="@drawable/logo2"
@@ -16,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".WriteActivity"></activity>
     </application>
 
 </manifest>
