--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".WriteActivity"></activity>
+        <activity android:name=".WriteActivity"
+            android:windowSoftInputMode="stateVisible"
+            ></activity>
     </application>
 
 </manifest>
