--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="morningpages.app.niklas.morningpages">
 
-    <!-- TODO Schöneres Logo, von Creative Commons? CC in Dingen mit Geld erlaubt?, RUnde Ecken -->
+    <!-- TODO Test, dass auch horizontal in Porttrai Mode in beiden Activities -->
+    <!-- TODO Nächstes Update: Horizontal Mode für beide Activities -->
     <application
         android:allowBackup="true"
-        android:icon="@drawable/logo2"
+        android:icon="@mipmap/ic_own_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
