--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="morningpages.app.niklas.morningpages">
 
-    <!-- TODO Test, dass auch horizontal in Porttrai Mode in beiden Activities -->
     <!-- TODO Nächstes Update: Horizontal Mode für beide Activities -->
     <application
         android:allowBackup="true"
@@ -10,7 +9,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".TimerActivity">
+        <activity android:name=".TimerActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,9 +20,15 @@
         </activity>
         <activity
             android:name=".WriteActivity"
-            android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".FinishedActivity" />
-        <activity android:name=".MonkeyFreeActivity"></activity>
+            android:windowSoftInputMode="adjustResize"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".FinishedActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".MonkeyFreeActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
